# magicproto-rb

./: .gitignore  .rubocop.yml  Cargo.toml  DESIGN.md  Gemfile  README.md  Rakefile  magicprotorb.gemspec
ext/magicprotorb_native/: Cargo.toml  extconf.rb
ext/magicprotorb_native/src/: lib.rs
lib/: magicprotorb.rb
lib/magicprotorb/: include_path.rb  loader.rb  naming.rb  registrar.rb  require_hook.rb  service_builder.rb  version.rb
sig/: magicprotorb.rbs
test/: test_grpc.rb  test_helper.rb  test_magicprotorb.rb  test_naming.rb
test/protos/broken/: bad.proto
test/protos/example/v1/: library.proto  types.proto
test/protos/greet/: hello.proto
